# Trading-research-assistant

./: .env.example  .gitignore  CODE_REVIEW_REPORT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: architecture.yml  ci.yml  docs-site-pages.yml
docs-site/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
docs-site/scripts/: prepare-docs.js
docs-site/src/: App.tsx  index.css  main.tsx
docs-site/src/lib/: docs-context.tsx  docs-manifest.ts  search.ts  theme.tsx  utils.ts
docs-site/src/pages/: DocsPage.tsx  Home.tsx  NotFound.tsx
docs/en/: architecture.md  env_configuration.md  import_rules.md  llm_task_routing.md  logging.md  overview.md  roadmap.md  safety_policy.md  troubleshooting.md  usage_guide.md
docs/ru/: architecture.md  env_configuration.md  import_rules.md  llm_task_routing.md  logging.md  overview.md  roadmap.md  safety_policy.md  troubleshooting.md  usage_guide.md
scripts/: README.md
scripts/linux/: backup.sh  check.sh  clean.sh  format.sh  lint.sh  run_checks.sh  setup.sh  test.sh
scripts/python/: backup_database.py  check_environment.py  check_gpu.py  check_import_boundaries.py  clean_cache.py  context_gen.py  download_models.py  initialize_project.py  run_all_checks.py  run_batch_analysis.py  setup_environment.py
scripts/windows/: backup.ps1  check.ps1  clean.ps1  format.ps1  lint.ps1  run_checks.ps1  setup.ps1  test.ps1
src/agents/: __init__.py  news_analyst.py  synthesizer.py  technical_analyst.py  verifier.py
src/agents/prompts/: news_prompts.py  synthesis_prompts.py  technical_prompts.py  verifier_prompts.py
src/app/: logging_config.py  main.py  settings.py  wiring.py
src/broker_journal/importers/: base_importer.py
src/broker_journal/manual/: journal_cli.py
src/core/: logging_helpers.py  pipeline_trace.py
src/core/models/: __init__.py  candle.py  decision_context.py  journal_entry.py  llm.py  news.py  outcome.py  rationale.py  recommendation.py  run.py  signal.py  technical_analysis.py  timeframe.py  verification.py
src/core/policies/: constraints.py  safety_policy.py
src/core/ports/: __init__.py  clock.py  llm_provider.py  llm_provider_name.py  llm_tasks.py  market_data_provider.py  news_provider.py  orchestrator.py  storage.py  verbose_reporter.py
src/core/services/: orchestrator.py  reporter.py  scheduler.py
src/data_providers/forex/: fallback_provider.py  oanda_provider.py  twelve_data_provider.py
src/decision/: policy.py  reason_codes.py  scoring.py
src/features/contracts/: feature_contract.py
src/features/derived/: basic_derived.py  ma_distance.py  ma_slope.py  momentum_derived.py  volatility_derived.py
src/features/indicators/: indicator_engine.py
src/features/math/: slope.py
src/features/patterns/: candlestick_patterns.py
src/features/regime/: regime_detector.py
src/features/signals/: crossovers.py
src/features/snapshots/: feature_snapshot.py
src/features/structure/: market_structure.py  swing_points.py
src/features/trend/: trend_detector.py
src/features/volatility/: volatility_estimator.py
src/features/volume/: volume_features.py
src/llm/deepseek/: __init__.py  deepseek_client.py
src/llm/ollama/: ollama_client.py
src/llm/providers/: llm_router.py
src/news_providers/: gdelt_provider.py  multi_news_provider.py  newsapi_provider.py
src/runtime/: config.py  orchestrator.py  preflight.py
src/runtime/jobs/: build_features_job.py  fetch_market_data_job.py  fetch_news_job.py  job_result.py  persist_recommendation_job.py  run_agents_job.py
src/runtime/loop/: minute_loop.py
src/storage/artifacts/: artifact_store.py  paths.py
src/storage/sqlite/: connection.py  storage.py
src/ui/cli/: dashboard.py  verbose_reporter.py
src/utils/: json_helpers.py  logging.py  logging_setup.py  market_schedule.py  retry.py  symbol_classifier.py  time_utils.py
tests/: conftest.py  test_market_schedule.py
tests/integration/providers/: test_gdelt_provider.py  test_newsapi_provider.py  test_oanda_provider.py  test_ollama_provider.py
tests/integration/runtime/: test_end_to_end_pipeline.py  test_fallback_in_job.py  test_run_agents_job_verification.py
tests/integration/storage/: test_artifact_llm_exchange.py  test_artifact_persistence.py  test_candles_repository.py  test_llm_metadata_persistence.py
tests/unit/agents/: test_synthesizer.py  test_synthesizer_policy.py  test_technical_analyst.py  test_technical_analyst_parsing.py  test_verifier_agent.py
tests/unit/app/: test_logging_config.py  test_logging_verbose_behavior.py  test_report_reason_codes.py  test_wiring_llm_router_default.py  test_wiring_ollama_server.py
tests/unit/core/: test_llm_provider_contract.py  test_llm_task_constants.py  test_pipeline_trace.py  test_policies.py  test_settings_env_parsing.py  test_verification_report.py
tests/unit/data_providers/: test_fallback_provider.py
tests/unit/decision/: test_confidence_calibration.py  test_decision_settings.py  test_policy_matrix.py  test_reason_codes.py  test_scoring.py
tests/unit/features/: test_basic_derived.py  test_build_features_job_integration.py  test_candlestick_patterns.py  test_crossovers.py  test_feature_completeness.py  test_feature_contract.py  test_feature_snapshot_markdown.py  test_indicators.py  test_ma_distance.py  test_ma_slope.py  test_momentum_derived.py  test_regime_and_snapshots.py  test_trend_detector.py  test_volatility_derived.py  test_volume_features.py
tests/unit/llm/: test_deepseek_provider.py  test_llm_router_fallback.py  test_llm_router_health_cache.py  test_llm_router_per_task_overrides.py
tests/unit/runtime/: test_minute_loop.py  (+6 more)
(+44 files in other folders)
