[project]
name = "Trading-research-assistant"
version = "0.1.0"
description = "Trading research assistant with LLM-powered analysis"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "tenacity>=8.2.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "ta>=0.11.0",
]

[project.optional-dependencies]
llm = [
    "ollama>=0.1.0",
]
ui = [
    "rich>=13.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
