[project]
name = "Trading-research-assistant"
version = "0.1.0"
description = "Trading research assistant with LLM-powered analysis"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "tenacity>=8.2.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "ta>=0.11.0",
    "ollama>=0.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "B", "I", "N", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
explicit_package_bases = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
